<!--
  ~ Created by Lee.
  ~ Copyright (c) 2017. All rights reserved.
  ~
  ~ Last modified 10/27/17 1:03 PM
  -->

<resources>
    <string name="app_name">Grain</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="login_id">Account</string>
    <string name="login_name">Name</string>
    <string name="login_pass">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_schoolId">This SchoolId is invalid</string>
    <string name="error_invalid_password">Password maybe your ID number(last 9 digits)</string>
    <string name="error_incorrect_password">This password maybe incorrect</string>
    <string name="error_field_required">This field is required</string>


    <!--drawer title-->
    <string name="drawer_title_feedback">Feedback</string>
    <string name="drawer_title_update">Update</string>
    <string name="drawer_title_about">About</string>
    <string name="drawer_title_exit">Login out</string>
    <string name="drawer_title_mark">Mark</string>
    <string name="drawer_title_schedule">Today</string>
    <string name="drawer_title_card">Card</string>
    <string name="drawer_title_library">Library</string>
    <string name="drawer_title_others">Others</string>

    <!-- fun title-->
    <string name="fun_title_your_mark" translatable="false">君の成绩</string>
    <string name="fun_title_your_card">Card</string>
    <string name="fun_title_library">Library</string>
    <string name="fun_title_schedule">Today</string>

    <!-- card title -->
    <string name="cd_title_time">Time</string>
    <string name="cd_title_place">Place</string>
    <string name="cd_title_terminal">Terminal</string>
    <string name="cd_title_consume">Consume</string>
    <string name="cd_title_balance">Balance</string>


    <!--my info-->
    <string name="dev_email" translatable="false">reindeerlee.work@gmail.com</string>
    <string name="about_page" translatable="false">https://github.com/LeeReindeer/Grain/</string>
    <string name="update_page" translatable="false">https://www.pgyer.com/grain</string>
    <string name="about_text">This is Grain which is my personal work.I hope it will bring you a nice experience.\n\nDue to the school curriculum interface problems, the development of curriculum functions will be delayed.\n\nAnd thanks 吃番茄的外星人 design this pretty icon.\n\nTo be continued...</string>
    <string name="empty" translatable="false" />
    <string name="about_license" translatable="false">License</string>

    <!--About Schedule-->
    <string name="sun" translatable="false">Sun</string>
    <string name="sta" translatable="false">Sta</string>
    <string name="fri" translatable="false">Fri</string>
    <string name="thu" translatable="false">Thu</string>
    <string name="wen" translatable="false">Wed</string>
    <string name="tue" translatable="false">Tue</string>
    <string name="mon" translatable="false">Mon</string>
    <string name="network_is_unavailable" translatable="false">Oops,Bad network.\n</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
