<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Lee.
  ~ Copyright (c) 2017. All rights reserved.
  ~
  ~ Last modified 9/8/17 4:49 PM
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_black_48dp"
            android:title="@string/drawer_title_schedule"/>
        <item
            android:id="@+id/nav_mark"
            android:icon="@drawable/ic_mark_black_48dp"
            android:title="@string/drawer_title_mark" />
        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/ic_card_black_48dp"
            android:title="@string/drawer_title_card"/>
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_black_48dp"
            android:title="@string/drawer_title_library"/>
    </group>

    <item android:title="@string/drawer_title_others">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_48dp"
                android:title="@string/drawer_title_exit" />
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_update_black_48dp"
                android:title="@string/drawer_title_update" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about_black_48dp"
                android:title="@string/drawer_title_about" />
        </menu>
    </item>

</menu>
