<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="xyz.leezoom.grain.ui.fragment.ScheduleFragment">

    <!--<WebView
        android:id="@+id/sd_web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </WebView>-->
    <LinearLayout
        android:id="@+id/sd_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- 最左边空白的格子 -->
        <TextView android:id="@+id/text_empty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/empty"/>

        <!-- 星期一的格子 -->
        <TextView android:id="@+id/text_monday_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:gravity="center"
            android:layout_toRightOf="@id/text_empty" />


        <!-- 星期二的格子 -->
        <TextView android:id="@+id/text_tuesday_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:gravity="center"
            android:layout_toRightOf="@id/text_monday_course" />

        <!-- 星期三的格子 -->
        <TextView android:id="@+id/text_wednesday_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wen"
            android:gravity="center"
            android:layout_toRightOf="@id/text_tuesday_course" />

        <!-- 星期四的格子 -->
        <TextView android:id="@+id/text_thursday_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thu"
            android:gravity="center"
            android:layout_toRightOf="@id/text_wednesday_course" />
        <!-- 星期五的格子 -->
        <TextView android:id="@+id/text_friday_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:gravity="center"
            android:layout_toRightOf="@id/text_thursday_course" />

        <!-- 星期六的格子 -->
        <TextView android:id="@+id/text_saturday_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sta"
            android:gravity="center"
            android:layout_toRightOf="@id/text_friday_course"
            />

        <!-- 星期天的格子 -->
        <TextView android:id="@+id/text_sunday_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:gravity="center"
            android:layout_toRightOf="@id/text_saturday_course"/>

    </LinearLayout>

    <xyz.leezoom.grain.ui.view.ScheduleView
        android:id="@+id/schedule_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/sd_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </RelativeLayout>

    </xyz.leezoom.grain.ui.view.ScheduleView>


</FrameLayout>
